--- a/src/common/style.css
+++ b/src/common/style.css
@@ -56,9 +56,12 @@
 /* border */
 .bor_ra_3 { border-radius: 3px }
 .bor_0 { border: 0; }
+.bor_l_gr { border-left: 4px solid #464646; }
+.bor_l_wh { border-left: 4px solid #f1f1f3; }
 
 /* padding */
 .padd_8 { padding: 8px; }
+.padd_l_8 { padding-left: 8px; }
 .padd_4 { padding: 4px }
 .padd_lr_18 { margin-left: 18px; margin-right: 18px; }
 
@@ -66,6 +69,7 @@
 .marg_4 { margin: 4px }
 .marg_11 { margin: 11px }
 .marg_lr_8 { margin-left: 7px; margin-right: 7px; }
+.marg_tb_2e { margin-top: 2em; margin-bottom: 2em; }
 
 /* overflow */
 .over_a { overflow: auto; }
@@ -75,6 +79,9 @@
 
 /* cursor */
 .cur_p { cursor: pointer; }
+
+/* list style */
+.li_s_n { list-style: none; }
 
 /* resize none */
 .resize_non { resize: none; }
