--- a/src/common/style.css
+++ b/src/common/style.css
@@ -1,6 +1,7 @@
 /* position */
 .pos_r { position: relative; }
 .pos_a { position: absolute; }
+.pos_f { position: fixed; }
 
 /* direction */
 .right_0 { right: 0; }
@@ -39,9 +40,13 @@
 .bgc_gray { background-color: #e3e3e3; }
 .bgc_ligh_gray { background-color: #eaeaea; }
 .bgc_dark { background-color: #464646; }
+.bgc_opa_gray { background-color: #7A7E7E; }
 
 /* opacity */
 .opacity { opacity: 0.8; }
+
+/* lineheight */
+.lh_2 { line-height: 2em; }
 
 /* textalign */
 .t_align_r { text-align: right; }
@@ -58,6 +63,7 @@
 .bor_0 { border: 0; }
 .bor_l_gr { border-left: 4px solid #464646; }
 .bor_l_wh { border-left: 4px solid #f1f1f3; }
+.bor_wh { border: 1px solid #f1f1f3; }
 
 /* padding */
 .padd_8 { padding: 8px; }
@@ -65,6 +71,8 @@
 .padd_2 { padding: 2px; }
 .padd_4 { padding: 4px; }
 .padd_lr_18 { margin-left: 18px; margin-right: 18px; }
+.padd_b_8 { padding-bottom: 8px; }
+.padd_tb_8 { padding-top: 8px; padding-bottom: 8px; }
 
 /* margin */
 .marg_2 { margin: 2px; }
