--- a/src/common/style.css
+++ b/src/common/style.css
@@ -31,6 +31,7 @@
 .w_80 { width: 80%; }
 .h_100 { height: 100%; }
 .wh_100 { width: 100%; height: 100%; }
+.wh_100v { width: 100vw; height: 100vh; }
 
 /* font-size */
 .fz_11 { font-size: 11px; }
@@ -39,6 +40,7 @@
 .font_bol { font-weight: bolder; }
 .text_shad_dark { text-shadow: 0 0 17px #464646; }
 .text_cent { text-align: center; }
+.text_dec_non { text-decoration: none; }
 
 /* background */
 .bgc_gray { background-color: #e3e3e3; }
@@ -62,6 +64,7 @@
 /* color */
 .gray_dark_color { color: #727272; }
 .white_color { color: #f1f1f3 }
+.red_color { color: #BB7570; }
 
 /* border */
 .bor_ra_3 { border-radius: 3px }
@@ -83,6 +86,8 @@
 /* margin */
 .marg_2 { margin: 2px; }
 .marg_4 { margin: 4px; }
+.marg_tb_8 { margin-top: 8px; margin-bottom: 8px; }
+.marg_t_8 { margin-top: 8px; }
 .marg_8 { margin: 8px; }
 .marg_11 { margin: 11px; }
 .marg_lr_8 { margin-left: 7px; margin-right: 7px; }
